# Bloop

./: .gitignore  Cargo.toml  build.rs  package-lock.json
src/: main.rs  scripts.rs
src/scripts/: base64_decode.js  base64_encode.js  base64decode.js  base64encode.js  minimise.js
src/web/: app.js
