[package]
authors = ["Blaine <rishi1998@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "bloop"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "3.0.1"
glob = "0.3.0"
rust-embed = "5.6.0"
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
tinyfiledialogs = "3.3.10"
web-view = {git = "https://github.com/Blakeinstein/web-view/"}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
FileDescription = "A light weight scratch pad for developers"
LegalCopyright = "© 2020 Blaine"
OriginalFilename = "Bloop.EXE"
ProductName = "Bloop"
ProductVersion = "0.1.0"
